--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -23,6 +23,6 @@ jobs:
       - name: Publish to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
-          # Use PyPI trusted publishing; configure in PyPI project settings
+          # Uses OpenID Connect (Trusted Publishing). Configure in PyPI project settings.
           verbose: true
 
